...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profilePage">


    <ImageView
        android:id="@+id/uploadPicture"
        android:layout_width="183dp"
        android:layout_height="192dp"
        android:src="@drawable/avatar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
            android:ems="10"
            android:inputType="date" />

    </LinearLayout>

    <Button
        android:id="@+id/imageUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Update Profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.691" />
...
