...
    <item android:id="@+id/explorePage"
        android:title="Explore"
        android:icon="@drawable/explore"/>
    <item android:id="@+id/mapPage"
        android:title="Map"
        android:icon="@drawable/map"/>
    <item android:id="@+id/profilePage"
        android:title="Profile"
        android:icon="@drawable/profile"/>

</menu>
