<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_bar"
    app:startDestination="@id/explorePage">

    <fragment
        android:id="@+id/explorePage"
        android:name="com.example.eventme.ExplorePage"
        android:label="EventMe - Explore"
        tools:layout="@layout/fragment_explore_page" />
    <fragment
        android:id="@+id/mapPage"
        android:name="com.example.eventme.mapPage"
        android:label="EventMe - Map"
        tools:layout="@layout/fragment_map_page" />

    <fragment
        android:id="@+id/profilePage"
        android:name="com.example.eventme.profilePage"
        android:label="EventMe - Profile"
        tools:layout="@layout/fragment_profile_page" />
</navigation>